tests/__snapshots__/validation-reporters-wrong-option-value-type-stderr.snap.txt
Error: Option 'reporters' requires a value of type list.

  1 | {
  2 |   "reporters": "./tstyche-reporter.js",
    |                ~~~~~~~~~~~~~~~~~~~~~~~
  3 |   "testFileMatch": [
  4 |     "examples/*.test.*"
  5 |   ]
  6 | }

      at ./tstyche.config.json:2:16

